added note on the setup.html to tell user they can exit with ctrl+x

--- a/src/windows/setup.html
+++ b/src/windows/setup.html
@@ -131,6 +131,7 @@
             <label for="local" class="active">Local Administration</label>
             <div class="row local">
               <div class="col s12"><p>Press <strong>CTRL + A</strong> to activate after setup.</p></div>
+              <div class="col s12"><p>Press <strong>CTRL + X</strong> to close the app from setup ONLY.</p></div>
             </div>
           </div>
           <div class="col s3">
