Added option to minimize the window in setup as well

--- a/src/windows/setup.html
+++ b/src/windows/setup.html
@@ -132,6 +132,7 @@
             <div class="row local">
               <div class="col s12"><p>Press <strong>CTRL + A</strong> to activate after setup.</p></div>
               <div class="col s12"><p>Press <strong>CTRL + X</strong> to close the app from setup ONLY.</p></div>
+              <div class="col s12"><p>Press <strong>CTRL + W</strong> to minimize from setup ONLY.</p></div>
             </div>
           </div>
           <div class="col s3">
